Updating composer files

--- a/composer.json
+++ b/composer.json
@@ -6,14 +6,14 @@
         "php": ">=7.1.0",
         "laravel/framework": "5.3.*",
         "laravel-doctrine/orm": "1.2.*",
-        "tempest-tools/common": "1.0.*"
+        "tempest-tools/common": "2.0.*"
     },
     "require-dev": {
     },
     "license": "MIT",
     "autoload": {
         "psr-4": {
-            "TempestTools\\Crud\\": "src/"
+            "TempestTools\\Scribe\\": "src/"
         }
     },
     "authors": [
